fix navigate menu hover jumps

--- a/css/project_nav.css
+++ b/css/project_nav.css
@@ -24,6 +24,7 @@
 	margin-bottom: 2em;
 }
 
+
 #project-navigation th {
 	background-color: inherit;
 	/* background-image: url(http://www.mozdev.org/sharedimages/nav-icon.png); */
@@ -66,33 +67,20 @@ td.navigation-list a * {
 
 td.navigation-list a[href$='donate.html'], td.navigation-list a[href$='donate.html']:visited {
 	background: rgb(175, 240, 102);
-	background:    linear-gradient(to bottom, rgb(252, 234, 187) 0%, rgb(252, 205, 77) 50%, rgb(248, 181, 0) 51%, rgb(251, 223, 147) 100%);
-	background: -webkit-linear-gradient(center top , rgb(252, 234, 187) 0%, rgb(252, 205, 77) 50%, rgb(248, 181, 0) 51%, rgb(251, 223, 147) 100%);
-	color: #000;
-    background-repeat: repeat-x;
+	background: linear-gradient(to bottom, rgb(252, 234, 187) 0%, rgb(252, 205, 77) 50%, rgb(248, 181, 0) 51%, rgb(251, 223, 147) 100%);
+  background-repeat: repeat-x;
+	color: white;
 }
 
-td.navigation-list a:hover
+#project-navigations td.navigation-list a:hover
 {
 	background: rgb(254,204,177);
 	background:    linear-gradient(to bottom, rgba(254,204,177,1) 0%, rgba(241,116,50,1) 50%, rgba(234,85,7,1) 51%, rgba(251,149,94,1) 100%);
 	background: -webkit-linear-gradient(top, rgba(254,204,177,1) 0%, rgba(241,116,50,1) 50%, rgba(234,85,7,1) 51%, rgba(251,149,94,1) 100%);
-	color: #000 !important;
-	margin-top: 2px !important;
+	color: white !important;
+	margin: 2px 3px 0px 2px !important;
 	text-decoration: none;
 }
-td.navigation-list a:selected {
-    padding: 0px 5px 2px 2px !important;
-    background-color:  Highlight !important;
-    color: HighlightText !important;
-    border: 1px solid ThreeDHighlight !important; /* #666 */
-    border-right: 1px solid ThreeDDarkShadow !important; /* new */
-    border-bottom: none !important;
-    height: 21px;
-    margin-top: 2px !important;
-    margin-bottom: -1px !important;
-}
-
 
 td.navigation-list a.active {
 	background-color: rgb(255,193,193); 
